--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 
 
-
 body {
     background-color: #ddd;
     font-family:primary;
@@ -9,6 +8,17 @@ body {
 
 @theme {
     --color-primary:#55624E;
+    --color-secondary:#CAA88A;
     --font-primary:"Playfair Display", 'serif';
-   
 }
+
+/* styles.css */
+.container {
+    width: 100%;                      /* Tam genişlik */
+    max-width: 1200px;                /* Maksimum genişlik, ihtiyacınıza göre değiştirebilirsiniz */
+    margin-left: auto;                /* Yatayda merkezleme */
+    margin-right: auto;               /* Yatayda merkezleme */
+    padding-left: 1rem;               /* Sol iç boşluk */
+    padding-right: 1rem;              /* Sağ iç boşluk */
+  }
+  
