--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 @import "tailwindcss";
 
+*{
+    box-sizing: border-box;
+}
+
 body,html {
     overflow-x: hidden;
+    margin: 0;
 }
 body {
     background-color: #ddd;
