--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,22 @@ body {
     padding-right: 1rem;             
   }
   
+  ::-webkit-scrollbar {
+    width: 14px; 
+    height: 12px; 
+    background-color: #fff;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #55624E; 
+    border-radius: 10px; 
+    border: 3px solid #fff;
+   
+  }
+
+  
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #CAA88A; 
+    
+  }
